--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -50,32 +50,23 @@ jobs:
 
       - name: Setup buildx builder
         run: |
-          docker buildx inspect build_$IMAGE_NAME >/dev/null 2>&1 || \
-          docker buildx create --name build_$IMAGE_NAME --use --bootstrap
-        env:
-          IMAGE_NAME: ${{ github.repository_name }}
+          docker buildx inspect build_${{ github.repository_name }} >/dev/null 2>&1 || \
+          docker buildx create --name build_${{ github.repository_name }} --use --bootstrap
 
       - name: Build and push architecture-specific image
-        env:
-          IMAGE_NAME: ${{ github.repository_name }}
-          GIT_USER: ${{ secrets.GIT_USER }}
-          DATE_TAG: ${{ steps.tags.outputs.date }}
-          SHORT_SHA: ${{ steps.tags.outputs.sha }}
         run: |
           docker buildx build \
             --builder build_$IMAGE_NAME \
             --platform linux/${{ matrix.arch }} \
-            --cache-from=type=registry,ref=ghcr.io/$GIT_USER/$IMAGE_NAME:cache \
-            --cache-to=type=registry,ref=ghcr.io/$GIT_USER/$IMAGE_NAME:cache,mode=max \
-            -t ghcr.io/$GIT_USER/$IMAGE_NAME:${{ steps.tags.outputs.sha }}-${{ matrix.arch }} \
-            -t ghcr.io/$GIT_USER/$IMAGE_NAME:${{ steps.tags.outputs.date }}-${{ matrix.arch }} \
+            --cache-from=type=registry,ref=ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:cache \
+            --cache-to=type=registry,ref=ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:cache,mode=max \
+            -t ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:${{ steps.tags.outputs.sha }}-${{ matrix.arch }} \
+            -t ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:${{ steps.tags.outputs.date }}-${{ matrix.arch }} \
             --push \
-            docker-$IMAGE_NAME
+            docker-${{ github.repository_name }}
 
       - name: Cleanup builder
-        run: docker buildx rm build_$IMAGE_NAME || true
-        env:
-          IMAGE_NAME: ${{ github.repository_name }}
+        run: docker buildx rm build_${{ github.repository_name }} || true
 
     outputs:
       date: ${{ steps.tags.outputs.date }}
@@ -86,19 +77,25 @@ jobs:
     runs-on: self-hosted
     env:
       GIT_USER: ${{ secrets.GIT_USER }}
-      IMAGE_NAME: my-image
+      IMAGE_NAME: ${{ github.repository_name }}
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
       DATE_TAG: ${{ needs.docker-build.outputs.date }}
       COMMIT_TAG: ${{ needs.docker-build.outputs.sha }}
 
     steps:
       - name: Login to GHCR
-        run: echo $GHCR_TOKEN | docker login ghcr.io -u $GIT_USER --password-stdin
+        run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ secrets.GIT_USER }} --password-stdin
 
       - name: Create multi-arch manifest
         run: |
-          SHORT_SHA=${COMMIT_TAG}
-          docker manifest create ghcr.io/$GIT_USER/$IMAGE_NAME:latest \
-            --amend ghcr.io/$GIT_USER/$IMAGE_NAME:${SHORT_SHA}-amd64 \
-            --amend ghcr.io/$GIT_USER/$IMAGE_NAME:${SHORT_SHA}-arm64
-          docker manifest push ghcr.io/$GIT_USER/$IMAGE_NAME:latest
+          # latest tag
+          docker manifest create ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:latest \
+            --amend ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:${COMMIT_TAG}-amd64 \
+            --amend ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:${COMMIT_TAG}-arm64
+          docker manifest push ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:latest 
+
+          # date tag
+          docker manifest create ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:${{ steps.tags.outputs.date }} \
+            --amend ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:${COMMIT_TAG}-amd64 \
+            --amend ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:${COMMIT_TAG}-arm64
+          docker manifest push ghcr.io/${{ secrets.GIT_USER }}/${{ github.repository_name }}:${{ steps.tags.outputs.date }} 
