--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -18,12 +18,17 @@ jobs:
       matrix:
         arch: [amd64, arm64]
     outputs:
-      digest: ${{ steps.build.outputs.digest }}
+      #digest: ${{ steps.build.outputs.digest }}
       sha: ${{ steps.tags.outputs.sha }}
       date: ${{ steps.tags.outputs.date }}
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
+      - name: Set tags
+        id: set-tags
+        run: |
+          echo "sha=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+          echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
       - name: Login GHCR
         uses: docker/login-action@v3
         with:
