--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -18,17 +18,11 @@ jobs:
       matrix:
         arch: [amd64, arm64]
     outputs:
-      #digest: ${{ steps.build.outputs.digest }}
       sha: ${{ steps.tags.outputs.sha }}
       date: ${{ steps.tags.outputs.date }}
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
-      - name: Set tags
-        id: set-tags
-        run: |
-          echo "sha=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
-          echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
       - name: Login GHCR
         uses: docker/login-action@v3
         with:
@@ -60,9 +54,12 @@ jobs:
       - name: Create and push multi-arch manifests
         env:
           GHCR_IMAGE: ${{ github.repository }}
-          SHORT_SHA: ${{ needs.build-multiarch.outputs.sha }}
+          SHORT_SHA: ${{ github.sha }}
           DATE_TAG: ${{ needs.build-multiarch.outputs.date }}
-        run: |          
+        run: |
+          SHORT_SHA=${SHORT_SHA::7}
+          DATE_TAG=$(date +'%Y.%m.%d_%H%M')
+          
           # latest tag manifest
           docker manifest create ghcr.io/$GHCR_IMAGE:latest \
             --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64 \
