--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -55,11 +55,11 @@ jobs:
         env:
           GHCR_IMAGE: ${{ github.repository }}
           SHORT_SHA: ${{ github.sha }}
-          DATE_TAG: ${{ needs.build-multiarch.outputs.date }}
+          #DATE_TAG: ${{ needs.build-multiarch.outputs.date }}
+          DATE_TAG: $(date +'%Y.%m.%d_%H%M')
         run: |
           SHORT_SHA=${SHORT_SHA::7}
-          DATE_TAG=$(date +'%Y.%m.%d_%H%M')
-          
+                
           # latest tag manifest
           docker manifest create ghcr.io/$GHCR_IMAGE:latest \
             --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64 \
