--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -17,9 +17,6 @@ jobs:
     strategy:
       matrix:
         arch: [amd64, arm64]
-    outputs:
-      sha: ${{ steps.tags.outputs.sha }}
-      date: ${{ steps.tags.outputs.date }}
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -37,6 +34,8 @@ jobs:
           file: Dockerfile
           platforms: linux/${{ matrix.arch }}
           push: true
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:cache
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:cache,mode=max
           tags: |
             ghcr.io/${{ github.repository }}:${{ github.sha }}-${{ matrix.arch }}
 
@@ -55,21 +54,20 @@ jobs:
         env:
           GHCR_IMAGE: ${{ github.repository }}
           SHORT_SHA: ${{ github.sha }}
-          #DATE_TAG: ${{ needs.build-multiarch.outputs.date }}
           DATE_TAG: $(date +'%Y.%m.%d_%H%M')
         run: |
           SHORT_SHA=${SHORT_SHA::7}
-          DATE_TAG=$(date +'%Y.%m.%d_%H%M')
-      
+          #DATE_TAG=$(date +'%Y.%m.%d_%H%M')
+
           echo "Using SHORT_SHA: $SHORT_SHA"
           echo "Using DATE_TAG: $DATE_TAG"
-      
+
           # latest tag manifest
           docker manifest create ghcr.io/$GHCR_IMAGE:latest \
             --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64 \
             --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
           docker manifest push ghcr.io/$GHCR_IMAGE:latest
-      
+
           # date tag manifest
           docker manifest create ghcr.io/$GHCR_IMAGE:$DATE_TAG \
             --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64 \
