--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -66,6 +66,13 @@ jobs:
 
           echo "Using SHORT_SHA: $SHORT_SHA"
           echo "Using DATE_TAG: $DATE_TAG"
+          echo "Using GHCR_IMAGE: $GHCR_IMAGE"
+
+          docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64
+          docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
+          
+          echo "Sleep 10 secs, for the registry to parse the new images"
+          sleep 10  # give GHCR a moment
 
           # latest tag manifest
           docker manifest create ghcr.io/$GHCR_IMAGE:latest \
