--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -55,11 +55,16 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set date tag
+        id: tag
+        run: |
+          DATETIME_TAG=$(date +'%Y.%m.%d_%H%M%S')
+          echo "DATETIME_TAG=$DATETIME_TAG" >> $GITHUB_ENV
       - name: Create and push multi-arch manifests
         env:
           GHCR_IMAGE: ${{ github.repository }}
           SHORT_SHA: ${{ github.sha }}
-          DATE_TAG: ${date +'%Y.%m.%d_%H%M'}
+          DATE_TAG: ${{date +'%Y.%m.%d_%H%M'}}
         run: |
           SHORT_SHA=${SHORT_SHA::7}
           #DATE_TAG=${date +'%Y.%m.%d_%H%M'}
@@ -67,6 +72,7 @@ jobs:
           echo "Using SHORT_SHA: $SHORT_SHA"
           echo "Using DATE_TAG: $DATE_TAG"
           echo "Using GHCR_IMAGE: $GHCR_IMAGE"
+          echo "Using DATETIME_TAG: ${{ env.DATETIME_TAG }}"
 
           docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64
           docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
