--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -76,8 +76,8 @@ jobs:
           sleep 10  # give GHCR a moment
 
           
-          docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64
-          docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
+          #docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64
+          #docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
 
           # latest tag manifest
           docker manifest create ghcr.io/$GHCR_IMAGE:latest \
