--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -24,69 +24,137 @@ jobs:
         arch: [amd64, arm64]
     steps:
       - uses: actions/checkout@v4
+      
+      #- name: Set up QEMU
+        #uses: docker/setup-qemu-action@v3
+        
+      - name: Set up Docker Context for Buildx
+        id: buildx-context
+        run: |
+          docker context create builders
+          
       - uses: docker/setup-buildx-action@v3
+        with:
+          version: latest
+          endpoint: builders
       - name: Login GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push ${{ matrix.arch }} image
-        id: build
-        uses: docker/build-push-action@v6
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
         with:
           context: .
-          file: Dockerfile
+          file: ./Dockerfile
           platforms: linux/${{ matrix.arch }}
-          push: true
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:cache
-          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:cache,mode=max
           tags: |
+            ghcr.io/${{ github.repository }}:latest-${{ matrix.arch }}
             ghcr.io/${{ github.repository }}:${{ github.sha }}-${{ matrix.arch }}
+            
+      # - uses: actions/checkout@v4
+      # - uses: docker/setup-buildx-action@v3
+      # - name: Login GHCR
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Build and push ${{ matrix.arch }} image
+      #   id: build
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: .
+      #     file: Dockerfile
+      #     platforms: linux/${{ matrix.arch }}
+      #     push: true
+      #     cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:cache
+      #     cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:cache,mode=max
+      #     tags: |
+      #       ghcr.io/${{ github.repository }}:${{ github.sha }}-${{ matrix.arch }}
 
   manifest:
     runs-on: self-hosted
     needs: [build-multiarch]
-    steps:
-      - uses: docker/setup-buildx-action@v3
+    steps:   
+      - uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Login GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set date tag
-        id: tag
-        run: |
-          DATETIME_TAG=$(date +'%Y.%m.%d_%H%M%S')
-          echo "DATETIME_TAG=$DATETIME_TAG" >> $GITHUB_ENV
-      - name: Create and push multi-arch manifests
-        env:
-          GHCR_IMAGE: ${{ github.repository }}
-          SHORT_SHA: ${{ github.sha }}
-        run: |
-          #SHORT_SHA=${SHORT_SHA::7}
-          # DATE_TAG=${date +'%Y.%m.%d_%H%M'}
 
-          echo "Using SHORT_SHA: $SHORT_SHA"
-          echo "Using GHCR_IMAGE: $GHCR_IMAGE"
-          echo "Using DATETIME_TAG: ${{ env.DATETIME_TAG }}"
+      - name: Create SHA manifest and push
+        run: |
+          docker manifest create \
+            my-registry/my-repo:${{ github.sha }} \
+            --amend ghcr.io/${{ github.repository }}:${{ github.sha }}-amd64 \
+            --amend ghcr.io/${{ github.repository }}:${{ github.sha }}-arm64
+          docker manifest push ghcr.io/${{ github.repository }}:${{ github.sha }}
+
+      - name: Create latest manifest and push
+        run: |
+          docker manifest create \
+            my-registry/my-repo:latest \
+            --amend ghcr.io/${{ github.repository }}:latest-amd64 \
+            --amend ghcr.io/${{ github.repository }}:latest-arm64
+          docker manifest push ghcr.io/${{ github.repository }}:latest
+
+
+
+    
+      # - uses: docker/setup-buildx-action@v3
+      # - name: Login GHCR
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Set date tag
+      #   id: tag
+      #   run: |
+      #     DATETIME_TAG=$(date +'%Y.%m.%d_%H%M%S')
+      #     echo "DATETIME_TAG=$DATETIME_TAG" >> $GITHUB_ENV
+      # - name: Create and push multi-arch manifests
+      #   env:
+      #     GHCR_IMAGE: ${{ github.repository }}
+      #     SHORT_SHA: ${{ github.sha }}
+      #   run: |
+      #     #SHORT_SHA=${SHORT_SHA::7}
+      #     # DATE_TAG=${date +'%Y.%m.%d_%H%M'}
+
+      #     echo "Using SHORT_SHA: $SHORT_SHA"
+      #     echo "Using GHCR_IMAGE: $GHCR_IMAGE"
+      #     echo "Using DATETIME_TAG: ${{ env.DATETIME_TAG }}"
          
-          echo "Sleep 10 secs, for the registry to parse the new images"
-          sleep 10  # give GHCR a moment
+      #     #echo "Sleep 10 secs, for the registry to parse the new images"
+      #     #sleep 10  # give GHCR a moment          
+      #     #docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64
+      #     #docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
 
-          
-          #docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64
-          #docker pull ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
+      #     docker buildx build \
+      #       --platform linux/amd64,linux/arm64 \
+      #       -t ghcr.io/$GHCR_IMAGE:${SHORT_SHA} \
+      #       -t ghcr.io/$GHCR_IMAGE:latest \
+      #       -t ghcr.io/$GHCR_IMAGE:$DATETIME_TAG \
+      #       --push .
 
-          # latest tag manifest
-          docker manifest create ghcr.io/$GHCR_IMAGE:latest \
-            --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64 \
-            --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
-          docker manifest push ghcr.io/$GHCR_IMAGE:latest
 
-          # date tag manifest
-          docker manifest create ghcr.io/$GHCR_IMAGE:${{ env.DATETIME_TAG }} \
-            --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64 \
-            --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
-          docker manifest push ghcr.io/$GHCR_IMAGE:${{ env.DATETIME_TAG }}
+      #     # latest tag manifest
+      #     docker manifest create ghcr.io/$GHCR_IMAGE:latest \
+      #       --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64 \
+      #       --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
+      #     docker manifest push ghcr.io/$GHCR_IMAGE:latest
+
+      #     # date tag manifest
+      #     docker manifest create ghcr.io/$GHCR_IMAGE:${{ env.DATETIME_TAG }} \
+      #       --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64 \
+      #       --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
+      #     docker manifest push ghcr.io/$GHCR_IMAGE:${{ env.DATETIME_TAG }}
