--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Set up Docker Context for Buildx
         id: buildx-context
         run: |
-          docker context create builders
+          docker context inspect builders >/dev/null 2>&1 || docker context create builders
+
           
       - uses: docker/setup-buildx-action@v3
         with:
