--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -33,7 +33,6 @@ jobs:
         run: |
           docker context inspect builders >/dev/null 2>&1 || docker context create builders
 
-          
       - uses: docker/setup-buildx-action@v3
         with:
           version: latest
@@ -79,7 +78,12 @@ jobs:
   manifest:
     runs-on: ["self-hosted", "arm64"]
     needs: [build-multiarch]
-    steps:   
+    steps:
+      - name: Set date tag
+        id: tag
+        run: |
+          DATETIME_TAG=$(date +'%Y.%m.%d_%H%M%S')
+          echo "DATETIME_TAG=$DATETIME_TAG" >> $GITHUB_ENV
       - uses: actions/checkout@v4
 
       - name: Set up QEMU
@@ -102,12 +106,21 @@ jobs:
 
       - name: Create latest manifest and push
         run: |
-          docker manifest create \
-            ghcr.io/${{ github.repository }}:latest \
-            --amend ghcr.io/${{ github.repository }}:latest-amd64 \
-            --amend ghcr.io/${{ github.repository }}:latest-arm64
-          docker manifest push ghcr.io/${{ github.repository }}:latest
+          # docker manifest create \
+          #   ghcr.io/${{ github.repository }}:latest \
+          #   --amend ghcr.io/${{ github.repository }}:latest-amd64 \
+          #   --amend ghcr.io/${{ github.repository }}:latest-arm64
+          # docker manifest push ghcr.io/${{ github.repository }}:latest
 
+
+      
+          docker buildx imagetools create -t ghcr.io/${{ github.repository }}:${{ env.DATETIME_TAG }} \
+            ghcr.io/${{ github.repository }}:${SHORT_SHA}-amd64 \
+            ghcr.io/${{ github.repository }}:${SHORT_SHA}-arm64
+      
+          docker buildx imagetools create -t ghcr.io/${{ github.repository }}:latest \
+            ghcr.io/${{ github.repository }}:${SHORT_SHA}-amd64 \
+            ghcr.io/${{ github.repository }}:${SHORT_SHA}-arm64
 
       - name: Create or update release notes
         env:
